[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/RemoteServerGameBox.gd" type="Script" id=1]
[ext_resource path="res://ui/buttons/lock_small.png" type="Texture" id=2]
[ext_resource path="res://scripts/ui/WidgetIcon.gd" type="Script" id=3]
[ext_resource path="res://ui/buttons/eye.png" type="Texture" id=4]
[ext_resource path="res://scripts/ui/Widget.gd" type="Script" id=5]
[ext_resource path="res://ui/buttons/join_small.png" type="Texture" id=6]

[node name="RemoteServerGameBox" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -1002.0
rect_min_size = Vector2( 1900, 60 )
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1963.0
margin_bottom = 71.0
custom_constants/separation = 0
__meta__ = {
"_edit_lock_": true
}

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 1956.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
__meta__ = {
"_edit_lock_": true
}

[node name="Index" type="Label" parent="VBox/HBox"]
margin_top = 23.0
margin_right = 80.0
margin_bottom = 37.0
rect_min_size = Vector2( 80, 0 )
text = "#"
align = 1
valign = 1
clip_text = true

[node name="VSeparator" type="VSeparator" parent="VBox/HBox"]
margin_left = 84.0
margin_right = 88.0
margin_bottom = 60.0

[node name="Password" type="TextureRect" parent="VBox/HBox"]
margin_left = 92.0
margin_right = 152.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 4
script = ExtResource( 3 )
tooltip_enabled = true
tooltip = "MP_DESC_PROTECTED"

[node name="VSeparator2" type="VSeparator" parent="VBox/HBox"]
margin_left = 156.0
margin_right = 160.0
margin_bottom = 60.0

[node name="Places" type="Label" parent="VBox/HBox"]
margin_left = 164.0
margin_top = 23.0
margin_right = 409.0
margin_bottom = 37.0
rect_min_size = Vector2( 245, 0 )
text = "HEADER_PLACES"
align = 1
valign = 1
clip_text = true

[node name="VSeparator3" type="VSeparator" parent="VBox/HBox"]
margin_left = 413.0
margin_right = 417.0
margin_bottom = 60.0

[node name="TurnCount" type="Label" parent="VBox/HBox"]
margin_left = 421.0
margin_top = 23.0
margin_right = 541.0
margin_bottom = 37.0
rect_min_size = Vector2( 120, 0 )
text = "0"
align = 1
valign = 1
clip_text = true

[node name="VSeparator11" type="VSeparator" parent="VBox/HBox"]
margin_left = 545.0
margin_right = 549.0
margin_bottom = 60.0

[node name="Players" type="Label" parent="VBox/HBox"]
margin_left = 553.0
margin_top = 23.0
margin_right = 941.0
margin_bottom = 37.0
rect_min_size = Vector2( 388, 0 )
text = "Players"
align = 1
valign = 1
clip_text = true

[node name="VSeparator4" type="VSeparator" parent="VBox/HBox"]
margin_left = 945.0
margin_right = 949.0
margin_bottom = 60.0

[node name="GameType" type="Label" parent="VBox/HBox"]
margin_left = 953.0
margin_top = 23.0
margin_right = 1103.0
margin_bottom = 37.0
rect_min_size = Vector2( 150, 0 )
text = "GameType"
align = 1
valign = 1
clip_text = true

[node name="VSeparator5" type="VSeparator" parent="VBox/HBox"]
margin_left = 1107.0
margin_right = 1111.0
margin_bottom = 60.0

[node name="Handicap" type="Label" parent="VBox/HBox"]
margin_left = 1115.0
margin_top = 23.0
margin_right = 1315.0
margin_bottom = 37.0
rect_min_size = Vector2( 200, 0 )
text = "Handicap"
align = 1
valign = 1
clip_text = true

[node name="VSeparator6" type="VSeparator" parent="VBox/HBox"]
margin_left = 1319.0
margin_right = 1323.0
margin_bottom = 60.0

[node name="VSeparator7" type="VSeparator" parent="VBox/HBox"]
visible = false
margin_left = 1486.0
margin_right = 1490.0
margin_bottom = 64.0

[node name="ServerIP" type="Label" parent="VBox/HBox"]
visible = false
margin_left = 1454.0
margin_top = 23.0
margin_right = 1754.0
margin_bottom = 37.0
rect_min_size = Vector2( 300, 0 )
text = "IPAddress"
align = 1
valign = 1

[node name="VSeparator8" type="VSeparator" parent="VBox/HBox"]
visible = false
margin_left = 1758.0
margin_right = 1762.0
margin_bottom = 60.0

[node name="Description" type="Label" parent="VBox/HBox"]
margin_left = 1327.0
margin_top = 23.0
margin_right = 1812.0
margin_bottom = 37.0
rect_min_size = Vector2( 485, 0 )
text = "Description"
align = 1
valign = 1
clip_text = true

[node name="VSeparator9" type="VSeparator" parent="VBox/HBox"]
margin_left = 1816.0
margin_right = 1820.0
margin_bottom = 60.0

[node name="ReferenceRect" type="ReferenceRect" parent="VBox/HBox"]
visible = false
margin_left = 1736.0
margin_right = 1784.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="ObserveButton" type="TextureButton" parent="VBox/HBox"]
margin_left = 1824.0
margin_right = 1884.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 0 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
script = ExtResource( 5 )
unnamed = true
tooltip_enabled = true
tooltip = "BTN_OBSERVE"
tooltip_align = 1

[node name="VSeparator10" type="VSeparator" parent="VBox/HBox"]
margin_left = 1888.0
margin_right = 1892.0
margin_bottom = 60.0

[node name="JoinButton" type="TextureButton" parent="VBox/HBox"]
margin_left = 1896.0
margin_right = 1956.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 0 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5
script = ExtResource( 5 )
unnamed = true
tooltip_enabled = true
tooltip = "BTN_JOIN"
tooltip_align = 2

[node name="HSeparator" type="HSeparator" parent="VBox"]
margin_top = 60.0
margin_right = 1956.0
margin_bottom = 64.0

[connection signal="pressed" from="VBox/HBox/ObserveButton" to="." method="_on_ObserveButton_pressed"]
[connection signal="pressed" from="VBox/HBox/JoinButton" to="." method="_on_JoinButton_pressed"]
